Tring to fix background on ios

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,5 +1,4 @@
 html {
-  height: auto;
   min-height: 100%;
   max-height: 100%;
   width: 100%;
@@ -8,7 +7,6 @@ html {
 body
 {
   background: url('../images/BW Mountain.png') no-repeat center center fixed;
-  height: auto%;
   min-height: 100%;
   max-height: 100%;
   width: 100%;
